# notes-app

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  test_config.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: client.py
backend/app/models/: note.py  user.py
backend/app/routes/: auth.py  notes.py
backend/app/schemas/: auth.py  note.py  user.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  asynckit.js  axios.js  call-bind-apply-helpers.js  combined-stream.js  debug.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  math-intrinsics.js  mime-db.js  mime-types.js  ms.js  proxy-from-env.js  (+2 more)
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: Navbar.tsx  Providers.tsx  SEO.tsx
frontend/src/hooks/: useNotes.ts
frontend/src/lib/: api.ts  react-query.ts  store.ts
frontend/src/styles/: globals.css
frontend/src/types/: note.ts
(+31 files in other folders)
