[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-api-starter"
version = "0.1.0"
description = "FastAPI + MongoDB (motor) JWT starter for a Notes app (educational scaffold)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "motor>=3.3.2",
  "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["app*"]